Fixed the problems

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # API Configuration
-REACT_APP_API_BASE_URL=https://api.srisainutsandspices.com/api
+REACT_APP_API_BASE_URL=https://api.srisainutsandspices.com/api/storefront
 
 # App Configuration
 REACT_APP_APP_NAME=SpiceVault
