--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/react-dom": "^19.1.9",
     "axios": "^1.11.0",
     "iconsax-reactjs": "^0.0.8",
+    "js-cookie": "^3.0.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
@@ -15,6 +16,7 @@
     "typescript": "^4.9.5"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/react-router-dom": "^5.3.3"
   },
   "engines": {
